<resources>
    <string name="app_name">ProPark</string>
    <string name="user_id">USER ID</string>
    <string name="user_name">USER NAME</string>
    <string name="email">EMAIL</string>
    <string name="mobile">MOBILE</string>
    <string name="password">PASSWORD</string>
    <string name="submit">SUBMIT</string>
    <string name="welcome">WELCOME</string>
    <string name="login">LOGIN</string>
    <string name="congratulations">CONGRATULATIONS!</string>
    <string name="slot_is_available">SLOT IS AVAILABLE.</string>
    <string name="book_and_pay">BOOK AND PAY</string>
    <string name="back_to_profile">BACK TO PROFILE</string>
    <string name="profile">PROFILE</string>
    <string name="list_of_parking_lots">LIST OF PARKING LOTS</string>
    <string name="booking_status">BOOKING STATUS</string>
    <string name="logout">Logout</string>
    <string name="welcome_profile">Welcome!</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="check_availability">CHECK AVAILABILITY</string>
    <string name="book_a_slot">BOOK A SLOT</string>
    <string name="back_to_profile11">Back to Profile</string>
    <string name="fromtime">FromTime</string>
    <string name="number_of_hours">Duration (Hrs)</string>
    <string name="back_to_profile_1">Back to Profile</string>
    <string name="book">BOOK</string>
    <string name="back">BACK</string>
    <string name="benjamin_bannekera">Benjamin Banneker A</string>
    <string name="benjamin_bannekerb">Benjamin Banneker B</string>
    <string name="welcome_center">Welcome Center</string>
    <string name="email_id">Email ID</string>
    <string name="passwordLogin">Password</string>
    <string name="logintxt">LOGIN</string>
    <string name="ProPark">ProPark!</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="extendBooking">Extend Booking</string>
    <string name="noBooking">No Booking</string>
    <string name="book_extend_booking">Book/ Extend Booking</string>
    <string name="areas_list">Benjamin Banneker</string>
    <string name="samdareeya">B</string>
    <string name="spinner">Spinner</string>
    <string name="upload_data">Upload data</string>
    <string name="parking_lots">Parking Lots</string>
    <string name="location_name">Location name</string>
    <string name="availablespots">Availablespots</string>
    <string name="add_location">Add Location</string>
    <string-array name="usertype">
        <item>Student</item>
        <item>Admin</item>
        <item>Parking Lot Admin</item>
    </string-array>
    <string name="users">USERS</string>
    <string name="parking_spot">PARKING SPOT</string>
    <string name="area_status">AREA STATUS</string>
    <string name="spot_one">BBA SPOT 1</string>
    <string name="spot_two">BBA SPOT 2</string>
    <string name="spot_three">BBA SPOT 3</string>
    <string name="spot_four">BBB SPOT 1</string>
    <string name="spot_five">BBB SPOT 2</string>
    <string name="reservespots">RESERVE SPOTS</string>
    <string name="fromreserve">FromReserve</string>
    <string name="toReserve">toReserve</string>
    <string name="reserve">RESERVE</string>
    <string name="spot_six">BBB SPOT 3</string>
    <string name="spot_seven">WC SPOT 1</string>
    <string name="spot_eight">WC SPOT 2</string>
    <string name="spot_nine">WC SPOT 3</string>
</resources>
